--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^27.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.15.0",
-    "jest": "^28.1.0",
+    "eslint": "^8.10.0",
+    "jest": "^27.5.1",
     "jwt-decode": "^3.1.2",
-    "nodemon": "^2.0.16",
-    "supertest": "^6.2.3"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   },
   "dependencies": {
+    "@vscode/sqlite3": "^5.0.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^2.0.0",
-    "sqlite3": "^5.0.8"
+    "knex": "^1.0.3"
   },
   "repository": {
     "type": "git",
